@@ -1,3 +1,12 @@
+2011-08-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCsymt.h,
+	  src/SDCCsymt.c,
+	  src/SDCCicode.c,
+	  src/SDCCopt.c,
+	  support/regression/tests/bool.c:
+	  Fixed bug #3031197.
+
 2011-08-27 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c,
